# RoboticInteligence

./: README.md
tilde/: README.md  package.xml  setup.cfg  setup.py
tilde/experiments/code/: plot.py
tilde/experiments/exp3/: faster in corners and in general_robot1_path.csv  faster in corners and in general_robot2_path.csv
tilde/experiments/experiment1/: baseline_robot1_path.csv  baseline_robot2_path.csv  robot1.csv  robot2.csv
tilde/experiments/experiment2/: faster in corners_robot1_path.csv  faster in corners_robot2_path.csv  robot1.csv  robot2.csv
tilde/experiments/experiment2.2/: faster in corners_robot1_path.csv  faster in corners_robot2_path.csv
tilde/experiments/experiment3/: robot1.csv  robot2.csv
tilde/experiments/experiment4/: faster in corners and in general_robot1_path.csv  faster in corners and in general_robot2_path.csv  robot1.csv  robot2.csv
tilde/experiments/experiment5/: robot1.csv  robot2.csv  (+2 more)
tilde/launch/: tilde.launch.py
tilde/param/: params.yaml
tilde/rviz/: robot_navigation.rviz
tilde/tilde/: __init__ .py  __init__ copy.py  __init__.py
tilde/world/: layer.yaml  second.model copy.yaml  second.model.yaml  serp.model.yaml  world.yaml
tilde_turtle/: CMakeLists.txt  LICENSE  Readme.md  package.xml  setup.cfg  setup.py
tilde_turtle/launch/: tilde_turtle.launch.py
tilde_turtle/rviz/: robot_navigation copy.rviz  robot_navigation.rviz
tilde_turtle/tilde_turtle/: wall_follower_fast.py  wall_follower_slow.py
tilde_turtle/tilde_world/: tilde.yaml  tilde_turtle_fast.model.yaml  tilde_turtle_slow.model.yaml  world.yaml
(+8 files in other folders)
