<?xml version="1.0"?>
<package format="3">
  <name>tilde_turtle</name>
  <version>0.0.1</version>
  <description>The tilde_turtle package</description>

  <maintainer email="up202401397@edu.fe.up.pt">Christopher Schneider, Toni Grgurevic, Juan Camilo Pacheco</maintainer>

  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>flatland_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
